--- a/WanAndroidApp/app/src/main/res/values/strings.xml
+++ b/WanAndroidApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WanAndroidApp</string>
+    <string name="request_login">嘤嘤嘤,请先登录</string>
+    <string name="load_failed">哦豁,可能是电波对不上,加载失败啦（╯‵□′）╯︵┴─┴</string>
 </resources>
