--- a/WanAndroidApp/app/src/main/res/values/strings.xml
+++ b/WanAndroidApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">WanAndroidApp</string>
     <string name="request_login">嘤嘤嘤,请先登录</string>
     <string name="load_failed">哦豁,可能是电波对不上,加载失败啦（╯‵□′）╯︵┴─┴</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
