--- a/WanAndroidApp/app/src/main/res/values/strings.xml
+++ b/WanAndroidApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">WanAndroidApp</string>
+    <string name="app_name">珂珂珂珂珂珂珂珂朵莉!</string>
     <string name="request_login">嘤嘤嘤,请先登录</string>
-    <string name="load_failed">哦豁,可能是电波对不上,加载失败啦（╯‵□′）╯︵┴─┴</string>
+    <string name="load_failed">哦豁,可能是电波对不上,加载失败啦</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
